objects/Case.object
<CustomObject><businessProcesses>
        <fullName>UD APAC Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses><businessProcesses>
        <fullName>UD Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses><fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,"All Case Details Captured", "Missing: "&amp;IF( ISPICKVAL( Status,""),"Status, ","")&amp;""&amp;IF(ISPICKVAL( Type ,""), "Type, ","")&amp;""&amp;IF( ISPICKVAL( Origin ,""), "Origin, ","")&amp;""&amp;IF( ISPICKVAL( Reason ,""), "Reason, ","")&amp;""&amp;IF( ISPICKVAL( Priority ,""), "Priority, ","")&amp;""&amp;IF( LEN( Subject )&lt;5, "Meaningful Subject Line","")&amp;""&amp;IF( OR(LEN(ContactId)=0,LEN( AccountId)=0), "Associated Account and Contact",""))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( OR(LEN(ContactId)=0,LEN( AccountId)=0), 0,10) + IF( ISPICKVAL( Status ,""), 0,15) + IF( ISPICKVAL( Type ,""), 0,15) + IF( ISPICKVAL( Origin ,""), 0,15) + IF( ISPICKVAL(   Reason ,""), 0,15) + IF(ISPICKVAL(Priority, ""),0,15) + IF(LEN( Subject )&lt;5,0,15)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields><fields>
        <fullName>PotentialLiability__c</fullName>
        <label>Potential Liability</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>GC1040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC1060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC1020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Prospect_Customer_Name2__c</fullName>
        <description>prepopulated field</description>
        <label>Prospect Customer Name</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Prospect_Customer_Name__c</fullName>
        <description>auto field for prospect/customer name.</description>
        <formula>Contact.FirstName   &amp; ' ' &amp;  Contact.FirstName &amp; ' of ' &amp;  Account.Name</formula>
        <inlineHelpText>auto field</inlineHelpText>
        <label>Prospect / Customer Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>SLAViolation__c</fullName>
        <label>SLA Violation</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Total_Open_Deal_Amount__c</fullName>
        <formula>Account.Total_Open_Deal_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Open Deal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>UserGroup__c</fullName>
        <description>Formular field to caculate the value based on user departments</description>
        <formula>if(CONTAINS( $Profile.Name &amp; $UserRole.Name, "Sales"), "Sales", 
   if(CONTAINS( $Profile.Name &amp; $UserRole.Name, "Marketing"), "Marketing",
      if(CONTAINS( $Profile.Name  &amp; $UserRole.Name, "Service"), "Service"
                                                , "General"
      )
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>automatic formular field</inlineHelpText>
        <label>User Group</label>
        <type>Text</type>
    </fields><fields>
        <fullName>total_open_deal_amount2__c</fullName>
        <description>pre-populated field</description>
        <label>total open deal amount2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>user_group2__c</fullName>
        <label>user group2</label>
        <picklist>
            <picklistValues>
                <fullName>sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>general</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>true</enableFeeds><recordTypeTrackFeedHistory>false</recordTypeTrackFeedHistory><sharingModel>Private</sharingModel><listViews>
        <fullName>AllClosedCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Cases</label>
    </listViews><listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.SOURCE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews><listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews><listViews>
        <fullName>Printers_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Printers Queue</label>
        <queue>Printers_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews><listViews>
        <fullName>RSA_queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>RSA queue</label>
        <queue>RSA_queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews><listViews>
        <fullName>critical_case_queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>critical case+lead+order queue</label>
        <queue>critical_case_queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews><listViews>
        <fullName>yh_global_salescloud_expert_suppoert_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>yh_global_salescloud_expert_suppoert</label>
        <queue>yh_global_salescloud_expert_suppoert</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews><listViews>
        <fullName>yh_us_east_support_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>yh_us_east_support</label>
        <queue>yh_us_east_support</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews><recordTypes>
        <fullName>Inquiry</fullName>
        <active>true</active>
        <businessProcess>UD Support Process</businessProcess>
        <label>Inquiry</label>
    </recordTypes></CustomObject>